# constrained_optimization

./: .flake8  .pre-commit-config.yaml  LICENSE.md  README.md  constrained_optimizer.py  requirements-dev.txt  setup.cfg
.github/workflows/: flake.yml  test.yml
src/torch_constrained/: __init__.py  constrained_optimizer.py  extra_optimizer.py  extra_optimizers.py  extragradient.py  multipliers.py  utils.py
tests/: HockSchittkowski.py  classification_test.py  dummy_test.py  ml_test.py
torch_constrained/: README.md  constrained_optimizer.py
