[metadata]
name = torch_constrained
version = 0.0.19
author = Manuel Del Verme
author_email = manuel.delverme@gmail.com
description = Torch Optimizer for constrained optimization problems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/manuel-delverme/constrained_optimization
project_urls =
    Bug Tracker = https://github.com/manuel-delverme/constrained_optimization/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
